--- a/index.html
+++ b/index.html
@@ -152,6 +152,21 @@
   </style>
 </head>
 <body>
+
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9052122196547849"
+     crossorigin="anonymous"></script>
+<!-- inicio -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-9052122196547849"
+     data-ad-slot="3241788116"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
+  
   <div class="card">
     <h1>Bienvenido, <span id="username-display"></span></h1>
 
