--- a/index.html
+++ b/index.html
@@ -150,6 +150,11 @@
       }
     }
   </style>
+<!-- anuncio adsense -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9052122196547849"
+     crossorigin="anonymous"></script>
+
+  
 </head>
 <body>
 
