--- a/quiz_kana.html
+++ b/quiz_kana.html
@@ -101,6 +101,12 @@
       button { font-size: 1.4rem; max-width: 180px; }
     }
   </style>
+
+<!-- anuncio adsense -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9052122196547849"
+     crossorigin="anonymous"></script>
+
+  
 </head>
 <body>
 <!-- Aquí podrías insertar tu script de Google Ads -->
