--- a/privacidad.html
+++ b/privacidad.html
@@ -16,6 +16,12 @@
       color: #444;
     }
   </style>
+
+<!-- anuncio adsense -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9052122196547849"
+     crossorigin="anonymous"></script>
+
+  
 </head>
 <body>
   <h1>Política de Privacidad</h1>
